# databricks-learning

data_generator/data_generator/: .gitignore  pyproject.toml  requirements.txt
data_generator/data_generator/src/data_generator/: data_generator.py
data_generator/kafka_generator/src/: kafka_producer.py
grafana_services/: docker-compose.yml  prometheus.py  prometheus.yml
iot_simulator/: sensor_consumer.py  sensor_producer.py
kafka_service/: docker-compose.yml
kafka_services/: docker-compose.yml
kafka_services/src/: kafka_consumer.py  kafka_producer.py
mongo_services/: docker-compose.yml
